Reformat using spotless